<resources>
    <string name="app_name">LingAny</string>
    <string name="api_host">185.143.172.57</string>
    <string name="api_prefix">/api/v1/lingany-da</string>
    <string name="api_categories">/categories</string>
    <string name="api_languages">/languages</string>
    <string name="api_reflection">/reflection</string>
    <string name="api_training">/training</string>
    <string name="isInitRef">isInitRef</string>
    <string name="reflectionId">reflectionId</string>
    <string name="nativeLang">nativeLang</string>
    <string name="foreignLang">foreignLang</string>

    <string name="loading">Loading</string>
    <string name="chooseNativeLang">Native language</string>
    <string name="chooseForeignLang">Foreign language</string>
    <string name="categories">Categories</string>

    <string name="pleaseWait">Please wait</string>

    <string name="headerTrainingTranslation">Find translation</string>
    <string name="headerTrainingSprint">Sprint</string>

    <string name="agreeButton">Yes</string>
    <string name="notAgreeButton">No</string>
    <string name="rememberButton">Remember</string>
    <string name="confirmButton">Confirm</string>
    <string name="writeTranslation">write translation</string>

    <string name="translatorHint">text</string>
    <string name="changeLanguageButton">Change</string>
    <string name="translateButton">Translate</string>

    <string name="badConnection">Bad network connection</string>
    <string name="emptyString"> </string>

    <string name="scoreString">Score:</string>

</resources>
