<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.tp.lingany.lingany.activities.TrainingSprintActivity">

    <TextView
        android:id="@+id/trainingSprintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerTrainingSprint"
        android:textSize="35sp"
        android:layout_gravity="center|top"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <LinearLayout
        android:id="@+id/containerForMarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:padding="50dp"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreeButton"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notAgreeButton"
            />
    </LinearLayout>

</LinearLayout>
