<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/fragment_type_bg_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/contentMarginBottom"
        android:layout_marginLeft="@dimen/contentMargin"
        android:layout_marginRight="@dimen/contentMargin"
        android:background="@drawable/fragment_content_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/firstLanguage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/changeLanguage"
                android:layout_width="@dimen/fragmentButtonChangeLanguage"
                android:layout_height="@dimen/fragmentButtonHeight"
                android:background="@drawable/fragment_type_button_bg"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/changeLanguageButton"
                />

            <TextView
                android:id="@+id/secondLanguage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/typeWordToTranslateTranslator"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_marginTop="@dimen/contentMargin"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:gravity="center"
            android:hint="@string/translatorHint"/>

        <TextView
            android:id="@+id/wordTranslationTranslator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="48sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="@dimen/fragmentButtonMarginEnd"
        android:orientation="horizontal">

        <Button
            android:id="@+id/translateButton"
            android:layout_width="@dimen/fragmentButtonSinglWidth"
            android:layout_height="@dimen/fragmentButtonHeight"
            android:background="@drawable/fragment_type_button_bg"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/translateButton"
            />

    </LinearLayout>

</FrameLayout>